# Health-Insights-AI-Assistance

./: run.py  setup_redis.ps1  test_followup.py  test_followup_agent.py
backend/: README.md  main.py  pyproject.toml  run.py  test_followup.html
backend/agents/: followup_agent.py  graph.py
backend/agents/orchestrator/: orchestrator.py
backend/api/models/: responses.py
backend/api/routes/: chat.py
backend/app/: nodes.py  state.py
backend/config/: settings.py
backend/core/: file_validators.py  llm.py  mock_redis.py  prompt_loader.py  session.py
backend/prompts/orchestrator/v1.0/: prompts.json
